--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>s5</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Project for Spring Boot 2 Reactive</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
